--- a/demo2.html
+++ b/demo2.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            
+            position: absolute;
             background: #f8fafc;
             min-height: 100vh;
             padding: 0 !important; /*FOOTER PADDING */
@@ -1231,4 +1231,5 @@
         });
     </script>
 </body>
+
 </html>
